--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-spring.application.name=backend
+# ===== DB (PostgreSQL) =====
+spring.datasource.url=jdbc:postgresql://localhost:5432/appdb
+spring.datasource.username=appuser
+spring.datasource.password=appuser
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ===== MyBatis =====
+# (추천) underscored 컬럼명을 camelCase로 자동 매핑: user_id -> userId
+mybatis.configuration.map-underscore-to-camel-case=true
+
+# XML 매퍼 쓸 거면(쓸 예정이면 추천)
+mybatis.mapper-locations=classpath:/mapper/*.xml
+
+# DTO/VO alias 패키지(선택)
+# mybatis.type-aliases-package=com.suhhoyeong.backend
